# AI_Project

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: ai.py  config.py  logger.py  models.py  routes.py  services.py  utils.py
kubernetes/: deployment.yaml  ingress.yaml  service.yaml
static/: script.js  style.css
templates/: index.html
tests/: test_api.py
